<resources>
    <string name="app_name">Campus App</string>
    <string name="welcome">CAMPUS APP</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="content_comsats_logo">Comsats Logo</string>
    <string name="input_message">Write a message</string>
    <string name="send">Send</string>
    <string name="name">Name:</string>
    <string name="reg_id">Reg ID:</string>
    <string name="blood_group">Blood Group:</string>
    <string name="contact">Contact #:</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="please_check_if_donor_is_agree_to_donate_blood">Please check if donor is agree to donate blood</string>
    <string name="blood_required">Blood required:</string>
    <string name="delete">Delete</string>
    <string name="last_bleeding_date_if">Last bleeding date, if</string>
    <string name="add">Add</string>
    <string name="track_faculty">Faculty Availability</string>
    <string name="available">Available</string>
    <string name="login">Login</string>
    <string name="for_admins">For admins</string>
    <string name="for_faculty_and_students">For faculty and students</string>
    <string name="search_for_faculty">Search for faculty…</string>
    <string name="blood_bank">Blood Bank</string>
    <string name="notifications">Event Notifications</string>
    <string name="logout">Logout</string>
    <string name="timetable">Timetable</string>
    <string name="complaint_poll">Complaint Poll</string>
    <string name="parking">Parking</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_email_id">Enter email id</string>
    <string name="send_mail">Send Mail</string>
    <string name="back">Back</string>
    <string name="change_password">Change Password</string>
    <string name="cancel">Cancel</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="campus_app">Campus App</string>
    <string name="change_email">Change Email</string>
    <string name="change_uname">Change Uname</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_description">Enter description</string>
    <string name="add_image_optional">Add Image (optional)</string>
    <string name="visual_proof">Visual proof</string>
    <string name="description">Description:</string>
    <string name="no_decription">No decription</string>
    <string name="subject"> </string>
    <string name="teacher"> </string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="wednesday">Wednesday</string>
    <string name="day_slot">DAY / SLOT</string>
    <string name="_08_00_to_09_30">08:00 To 09:30</string>
    <string name="_09_45_to_11_15">09:45 To 11:15</string>
    <string name="_11_30_to_13_00">11:30 To 13:00</string>
    <string name="_13_15_to_14_45">13:15 To 14:45</string>
    <string name="_15_00_to_16_30">15:00 To 16:30</string>
    <string name="_16_45_to_18_15">16:45 To 18:15</string>
    <string name="_18_30_to_20_00">18:30 To 20:00</string>
    <string name="_20_00_to_21_30">20:15 To 21:45</string>
    <string name="enter_subject_name">Enter subject name</string>
    <string name="enter_teacher_name">Enter teacher or class name</string>
    <string name="edit">Edit</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="login_account">Login Account</string>
    <string-array name="login_options">
        <item>Select Account</item>
        <item>Blood Bank</item>
        <item>Food</item>
    </string-array>
    <string-array name="admin_options">
        <item>Complaint type</item>
        <item>Food</item>
        <item>Management</item>
    </string-array>
    <string-array name="signup_options">
        <item>Select sign up option</item>
        <item>Teacher</item>
        <item>Student</item>
    </string-array>

    <string-array name="status_options">
        <item>Available</item>
        <item>Busy</item>
        <item>On Leave</item>
    </string-array>

    <string-array name="bloodGroup_options">
        <item>Select blood group</item>
        <item>O+</item>
        <item>O-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>

    <string-array name="toolbar_bloodGroup_options">
        <item>Blood group</item>
        <item>All</item>
        <item>O+</item>
        <item>O-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string-array name="privacy_options">
        <item>Group privacy</item>
        <item>Public</item>
        <item>Private</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="room">Room#</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="registration_id">Registration id</string>
    <string name="name_simple">Name</string>
    <string name="contact_simple">Contact #</string>
    <string name="enter_your_account_email_id_you_will_receive_the_new_password">Enter your account email id. You will receive the new password.</string>
    <string name="title_activity_nav">NavActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="comsats_atd">COMSATS ATD</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="silent_during_class">Silent during class</string>
    <string name="share_timetable">Share timetable</string>
    <string name="receive_blood_requests">Receive blood requests</string>
    <string name="reply">Reply</string>
    <string name="distance_from_you">Distance from you</string>
    <string name="accept">Accept</string>
    <string name="donate">Donate</string>
    <string name="reject">Reject</string>
    <string name="event_notifiations">Event notifiations</string>
    <string name="class_notifications">Class notifications</string>
    <string name="ok">OK</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="create_group">Create Group</string>
    <string name="choose_picture">Choose picture</string>
    <string name="group_name">Group name</string>
    <string name="no_recent_message">No recent message</string>
    <string name="mute_group_chat">Mute group chat</string>
    <string name="unmute_group_chat">Unmute group chat</string>
    <string name="send_message_to">Send message to</string>
    <string name="_320">320</string>
    <string name="information">Information</string>
    <string name="group_is_private">Group is private</string>
    <string name="group_is_private_to_join_send">Group is private, to join send</string>
    <string name="request">Request</string>
    <string name="group_requests">Group requests</string>
    <string name="pending_requests">Pending requests</string>
    <string name="busy">Busy</string>
    <string name="on_leave">On Leave</string>
    <string name="select_status">Select status</string>
    <string name="auto_reset_to">Auto reset to</string>
    <string name="auto_reset">Auto reset</string>
    <string name="at">At</string>
    <string name="set_time">Set time</string>
    <string name="no_blood_requests">No blood requests</string>
    <string name="no_response">No response</string>
    <string name="no_pending_requests">No pending requests</string>
    <string name="choose_image">Choose image</string>
    <string name="take_picture">Take Picture</string>
    <string name="no_complaints">No complaints</string>
    <string name="receive_complaints">Receive complaints</string>
    <string name="groups">Groups</string>
    <string name="notification">Notifications</string>
    <string name="pending_complaints">Pending Complaints</string>
    <string name="processed_complaints">Processed Complaints</string>
</resources>
