<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomePageView">

    <group>
        <item android:title="@string/event_notifiations">
            <menu>
                <item
                    android:id="@+id/nav_notification"
                    app:actionLayout="@layout/notifications_checkbox"
                    android:icon="@drawable/ic_list_notification"
                    android:title="@string/enable_notifications" />
            </menu>
        </item>

        <item android:title="@string/timetable">
            <menu>
                <item
                    android:id="@+id/nav_timetable_notifications"
                    app:actionLayout="@layout/timetable_notificatios_checkbox"
                    android:icon="@drawable/ic_list_timetable"
                    android:title="@string/class_notifications" />
                <item
                    android:id="@+id/nav_timetable_share"
                    app:actionLayout="@layout/share_timetable_checkbox"
                    android:icon="@drawable/ic_list_timetable"
                    android:title="@string/share_timetable" />
                <item
                    android:id="@+id/nav_timetable_silent"
                    app:actionLayout="@layout/silent_class_checkbox"
                    android:icon="@drawable/ic_list_timetable"
                    android:title="@string/silent_during_class" />
            </menu>
        </item>

        <item android:title="@string/track_faculty">
            <menu>
                <item
                    android:id="@+id/nav_faculty_status"
                    app:actionLayout="@layout/tracking_notifications_checkbox"
                    android:icon="@drawable/ic_list_tracking"
                    android:title="@string/enable_notifications" />
            </menu>
        </item>

        <item android:title="@string/blood_bank">
            <menu>
                <item
                    android:id="@+id/nav_blood_requests"
                    app:actionLayout="@layout/blood_request_checkbox"
                    android:icon="@drawable/ic_list_blood"
                    android:title="@string/receive_blood_requests" />
            </menu>
        </item>

    </group>

</menu>
