<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/select_status"
            android:textColor="#fff"
            android:textSize="18sp"
            android:background="@color/colorAccent"/>

        <CheckBox
            android:id="@+id/CB_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available" />

        <CheckBox
            android:id="@+id/CB_busy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/busy" />

        <CheckBox
            android:id="@+id/CB_onLeave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/on_leave" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#000" />

        <Switch
            android:id="@+id/SW_autoReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:switchPadding="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/auto_reset"
            android:textColor="#7f7f7f"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:id="@+id/LL_autoReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/auto_reset_to"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spinner_background_style"
                    android:orientation="horizontal"
                    android:paddingBottom="6dp"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:paddingTop="6dp">

                    <Spinner
                        android:id="@+id/SPstatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:spinnerMode="dropdown" />

                    <ImageView
                        android:id="@+id/IV_openStatusSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_toEndOf="@+id/SPstatus"
                        android:layout_toRightOf="@+id/SPstatus"
                        android:contentDescription="@string/login_account"
                        android:src="@drawable/ic_action_expand" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/at"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/TV_dateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10:00 am"
                    android:textSize="14sp"
                    android:layout_marginBottom="15dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>