<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CVrequests"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/RL_cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/TV_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:paddingBottom="10dp"
            android:text="@string/name"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/TV_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TV_name"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:paddingBottom="10dp"
            android:text="@string/reg_id"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/TV_Bloodtype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TV_reg"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:paddingBottom="10dp"
            android:text="@string/blood_required"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/TV_Contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TV_Bloodtype"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:text="@string/contact"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/TV_requesterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/TV_name"
            android:layout_toLeftOf="@+id/btnReply"
            android:layout_toRightOf="@id/TV_name"
            android:layout_toStartOf="@+id/btnReply"
            android:textColor="#000"
            android:textSize="15sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/TV_requesterReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TV_name"
            android:layout_toEndOf="@+id/TV_reg"
            android:layout_toRightOf="@+id/TV_reg"
            android:text=""
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/TV_requesterBloodType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TV_reg"
            android:layout_toEndOf="@+id/TV_Bloodtype"
            android:layout_toRightOf="@+id/TV_Bloodtype"
            android:text=""
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/TV_requesterContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TV_Bloodtype"
            android:layout_toEndOf="@+id/TV_Contact"
            android:layout_toRightOf="@+id/TV_Contact"
            android:paddingBottom="10dp"
            android:text=""
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/btnReply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:contentDescription="@string/reply"
            android:drawableTop="@drawable/ic_action_reply"
            android:text="@string/donate"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/btnReply"
            android:contentDescription="@string/delete"
            android:drawableTop="@drawable/ic_action_discard"
            android:text="@string/delete"
            android:textColor="#000"
            android:textSize="15sp" />
    </RelativeLayout>

</android.support.v7.widget.CardView>