<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:id="@+id/privacyLayout"
    android:layout_gravity="center">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/group_is_private"
        android:src="@drawable/ic_action_group"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_gravity="center">

    <TextView
        android:id="@+id/TV_requestStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_is_private_to_join_send"
        android:textSize="18sp"
        android:textColor="#94b8c4"
        android:maxWidth="250dp"/>

        <com.andexert.library.RippleView
            android:id="@+id/btn_sendRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            rv_centered="true"
            app:rv_color="#e1ebee"
            app:rv_rippleDuration="250"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

        <Button
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:text="@string/request"
            android:textAllCaps="false"
            android:background="@drawable/request_button_background"
            android:textColor="#678089"
            android:layout_margin="2dp"
            />

        </com.andexert.library.RippleView>

    </LinearLayout>

</LinearLayout>